# Voxium

./: .env.example  README.md  README_VPS.md
backend/: Cargo.toml  discord2.db-shm  discord2.db-wal
backend/src/: auth.rs  crypto.rs  db.rs  lib.rs  main.rs  messages.rs  rooms.rs  uploads.rs  ws.rs
discord-app/: index.html
discord-app/src/: discord.js  main.js  runtime-config.js  style.css  voice.js
migrations/: 007_add_room_required_role.sql  008_add_message_reply.sql  009_add_message_pins.sql  010_add_server_roles.sql  013_add_discord_oauth.sql
