[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = "9"
bcrypt = "0.16"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
actix-multipart = "0.7"
actix-files = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
aes-gcm = "0.10"
rand = "0.8"
actix-governor = "0.5"

